# backend

./: main.py  pyproject.toml
data/: parse_data.py
migrations/versions/: 2a3f004d5039_initial_migration.py  6e8a359f0220_change.py  a2921614592e_change.py
src/data/: parse_data.py
src/database/: associative.py  base.py  db_actions.py  dc_actiona.py  models.py
